Fixe for document-preview-data on safari

--- a/css/components/document-preview.css
+++ b/css/components/document-preview.css
@@ -59,6 +59,7 @@
 	width:59%;
 	margin-right: 2%;
 	display: inline-block;
+	vertical-align: bottom;
 }
 
 .document-preview-file + .document-preview-data {
@@ -66,6 +67,7 @@
 	overflow-y: auto;
 	display: inline-block;
 	border: 1px solid var(--light-medium-background);
+	vertical-align: bottom;
 }
 
 .document-preview-external-link {
